--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+#ServerProperties
+server.port=8080
 
+
+#ThymeleafProperties
+spring.thymeleaf.cache=false
+
+# DataSourceProperties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
+spring.datasource.username=root
+spring.datasource.password=longyp199877
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.maximum-pool-size=15
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+
+# MybatisProperties
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.neu.langsam.community.entity
+mybatis.configuration.useGeneratedKeys=true
+mybatis.configuration.mapUnderscoreToCamelCase=true
+
+# logger
+#logging.level.com.neu.langsam.community=debug
+#logging.file=d:/work/data/nowcoder/community.log
