--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,11 @@ server.port=8080
 
 #ThymeleafProperties
 spring.thymeleaf.cache=false
+server.servlet.context-path=/community
 
 # DataSourceProperties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
+spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=longyp199877
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
@@ -23,4 +24,17 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
 #logging.level.com.neu.langsam.community=debug
-#logging.file=d:/work/data/nowcoder/community.log
+#logging.file.name=d:/workspace/community.log
+
+
+# MailProperties
+spring.mail.host=smtp.qq.com
+spring.mail.port=465
+spring.mail.username=550678626@qq.com
+spring.mail.password=ezellsaavvrsbfih
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+# Community
+community.path.domain=http://localhost:8080
+
