--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <version>3.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.penggle</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3.2</version>
+        </dependency>
 
 
     </dependencies>
