--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #ServerProperties
 server.port=8080
-
+server.servlet.context-path=/community
 
 #ThymeleafProperties
 spring.thymeleaf.cache=false
-server.servlet.context-path=/community
+
 
 # DataSourceProperties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -37,4 +37,4 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 
 # Community
 community.path.domain=http://localhost:8080
-
+community.path.upload=d:/workspace/communityData/upload
